--- a/front_server/package.json
+++ b/front_server/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
+    "swiper": "^4.4.1",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
